# shipnote

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
buildlog/: __init__.py  __main__.py  axis_runtime.py  cli.py  config_loader.py  daemon_runtime.py  errors.py  generation.py  git_cli.py  heuristic_filter.py  logging_utils.py  operator.py  process_loop.py  scaffold.py  state_manager.py  template_loader.py
buildlog/assets/templates/: growth.md  personal.md  thread.md  weekly_wrapup.md
shipnote/: __init__.py  __main__.py  cli.py  config_editor.py  config_loader.py  context_builder.py  daemon_runtime.py  errors.py  generation.py  git_cli.py  lockfile.py  logging_utils.py  operator.py  process_loop.py  prompts.py  queue_writer.py  scaffold.py  secret_scanner.py  state_manager.py  template_loader.py
shipnote/assets/templates/: authority.md  growth.md  personal.md  thread.md  translation.md  weekly_wrapup.md
tests/: test_cli_config.py  test_cli_smoke.py  test_cli_wizard.py  test_config_loader.py  test_context_builder.py  test_generation.py  test_git_cli.py  test_heuristic_filter.py  test_prompts.py  test_queue_writer.py  test_scaffold.py  test_secret_scanner.py  test_state_manager.py
