[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipnote"
version = "0.1.0"
description = "Generate build-in-public draft posts from git commits using axis-core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "axis-core",
]
authors = [
  { name = "Xavier Hillman" }
]
keywords = ["git", "ai", "automation", "content", "build-in-public"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/xavierhillman/shipnote"
Repository = "https://github.com/xavierhillman/shipnote"

[project.scripts]
shipnote = "shipnote.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["shipnote*"]

[tool.setuptools.package-data]
"shipnote.assets.templates" = ["*.md"]
